--- a/estilos.css
+++ b/estilos.css
@@ -36,10 +36,6 @@ h1{
     font-family: 'Chakra Petch', sans-serif;
     font-size: 60px;
     color: rgb(0, 0, 0);
-    position: absolute;
-    top: 90%;
-    left: 30%;
-    transform: translate(-50%, -50%);
     text-shadow: 0 0 8px whitesmoke;      
 }
 
@@ -72,8 +68,8 @@ section {
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    align-items: flex-end;
+    color: white;
     }   
 
 .principal div {
