--- a/estilos.css
+++ b/estilos.css
@@ -258,9 +258,10 @@ h4 {
         header{
             flex-wrap: wrap;
             }
-        }
+        
         nav ul { display: none; }
-        .icon {  display: block;  }
+        .icon {  display: block; 
+        text-align: right; }
 
         header div, header a {
             flex: 1 0 50%;
@@ -318,4 +319,5 @@ h4 {
                 }
             .footer p{
                 font-size: 10px;
+            }
             }
