--- a/estilos.css
+++ b/estilos.css
@@ -45,13 +45,6 @@ h1{
     text-align: center;
     }
 
-h3{
-    font-family: 'Spline Sans Mono', monospace;
-    font-size: 22px;
-    color: black;
-    text-align: center;
-    text-decoration: underline 3px rgba(146, 27, 243, 0.925);
-}
  h4{
     font-family: 'Spline Sans Mono', monospace;
     font-size: 22px;
@@ -126,22 +119,6 @@ section {
         margin-bottom: 2em;
         border: 5px solid rgb(217, 156, 249);
     }
-    	
-.terciario {
-        margin-top: 5%;
-        display: flex;
-    }
-
-.terciario div {
-        width: 33%;
-        padding: 2%;
-    }
-
-.terciario div img {
-        width: 100%;
-        margin-bottom: 2em;
-        border: 5px solid rgb(217, 156, 249);
-    }
 
 .criticas {
     margin-top: 2%;
@@ -204,12 +181,78 @@ section {
     width: 50%;
     padding: 2%;
     font-family: 'Spline Sans Mono', monospace;
+    font-size: larger;
 }
 .cuarto div img {
     width: 100%;
     margin-bottom: 2em;
+    border: 5px solid rgb(217, 156, 249);
     }
 
+    .terciario {
+        margin-top: 5%;
+        display: flex;
+    }
+    .contenedor{
+        width: 33%;
+        padding: 2%;
+    }
+    .contenedor figure{
+       position:relative;
+        height: 350px;
+        cursor: pointer;
+        overflow: hidden;
+        border-radius: 6px;
+        box-shadow: 0px 15px 25px rgba(0,0,0,0.50);
+    }
+    .contenedor figure img{
+        height: 100%;
+        width: 100%;
+        transition: all 400ms ease-out;
+        will-change: transform;
+        margin-bottom: 2em;
+        border: 5px solid rgb(217, 156, 249);
+    }
+    .contenedor figure .capa{
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(232, 210, 244, 0.7);
+        transition: all 400ms ease-out;
+        opacity: 0;
+        visibility: hidden;
+       text-align: center;
+    }
+    .contenedor figure:hover > .capa {
+        opacity: 1;
+        visibility: visible;
+    }
+    .contenedor figure:hover > .capa h3{
+        margin-top: 70px;
+        margin-bottom: 15px;
+    }
+    .contenedor figure:hover > img{
+        transform: scale(1.3);
+    }
+    .contenedor figure .capa h3{
+        color: #fff;
+        font-size: 15px;
+        margin-bottom: 120px;
+        transition: all 400ms ease-out;
+        margin-top: 30px;
+        font-family: 'Spline Sans Mono', monospace;
+        text-decoration: underline 3px rgba(228, 213, 240, 0.925);
+    }
+    .contenedor figure .capa p{
+        font-family: 'Spline Sans Mono', monospace;
+        color: #fff;
+        font-size: 13px;
+        line-height: 1.5;
+        width: 100%;
+        max-width: 220px;
+        margin: auto;
+    }
 button{
     font-family: 'Mukta', sans-serif;
     font-size: small;
@@ -226,29 +269,16 @@ button:hover{
     background-color: rgb(207, 124, 255);
 }
 
-h4 {
-    font-size: 1.5rem;
-}
-
-    footer {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 350px;
+ footer {
+    background-color: #fff;
+       
     }
-    
-    footer img {
-        padding-top: 2.5rem;
-        width: 100%;
-        height: auto;
-        margin-right: 1%;
-        max-width: 2.5rem;
-        }
-
-        .footer p{
-            font-size: 50px;
-            color: slategrey;
-        }
+    footer .conteinerfooter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 350px;
+    }
 
     .icon{
         display: none;
@@ -291,33 +321,228 @@ h4 {
                 color: rgb(0, 0, 0);
                 text-shadow: 0 0 8px whitesmoke;      
             }
+           
             .secundario {
                 margin-top: 1%;
                 display: block;
+
             }
-            
-            .secundario div {
-                width: 100%;
-            }
-            
+        
             .secundario div img {
+                width: 200%;
                 margin-bottom: 1em;
-                border: 5px solid rgb(217, 156, 249);
-            }
-            footer {
                 display: flex;
                 justify-content: center;
-                align-items: center;
-                height: 80px;
-            
+                margin-left: 50px;
+                margin-right: 50px;
             }
-            
-            footer img {
-                padding-top: 1.5rem;
-                margin-right: 2%;
-                max-width: 1.5rem;
-                }
-            .footer p{
+            .secundario h4{
+                margin-left: 50px;
+                margin-right: 50px;
                 font-size: 10px;
+                text-decoration: underline 1px rgba(146, 27, 243, 0.925);
+                display: flex;
+             }
+             
+             footer {
+                background-color: #fff;
+                }
+                
+            
+                footer .conteinerfooter{
+                    height: 150px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: flex-end;
+                    margin: 0;
+                    color: rgb(19, 18, 19);
+                     padding: 12px;
+                        }
+                
+             .criticas {
+                margin-top: 1%;
+                display: block;
+                    }
+                
+                    .criticas div {
+                        width: 33%;
+                        padding: 2%;
+                        text-align: center;
+                        margin-left: 50px;
+                        margin-right: 50px;
+                        font-size: 10px;
+                        text-decoration: underline 1px rgba(146, 27, 243, 0.925);
+                        display: flex;
+                    }
+                
+                    .criticas div img {
+                        width: 200%;
+                        margin-bottom: 1em;
+                        display: flex;
+                        justify-content: center;
+                       
+                        
+                        }
+                        button{
+                            font-size: 10px;
+                            font-weight: 10px;
+                            padding: 2px 2px;
+                            border-radius: 5px;
+                            border: 1px solid rgba(255, 255, 255, 0.5);
+                            box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+                            color: azure;
+                            background-color: rgb(241, 185, 255);
+                         
+                        }
+
+                        .titulo{
+                            font-family: 'Chakra Petch', sans-serif;
+                            font-size: 20px;
+                            color: black;
+                            text-align: center;
+                            }
+                    
+                            .principal2{
+                                height: 250px;
+                            }
+                          .galeria div{
+            width: 10%;
+            padding: 2%;
+           align-items: center;
+            margin-left: 10px;
+            margin-right: 10px;
+            display: flex;
+        }
+        .galeria div img.example-image{
+           
+          
+            margin-bottom: 1em;
+            display: flex;
+            justify-content: center;
+        }
+        #argumento .conteiner{
+            display: flex;
+            justify-content: center;
+            margin-top: 2%;
+            padding: 2%;
+             text-align: center;
+        }
+        
+        #argumento .texto{
+            text-align: initial;
+            padding-left: 10px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            line-height: 20px;
+          
+           
+        }
+        
+        .tituloargumento{
+            font-family: 'Chakra Petch', sans-serif;
+            font-size: 30px;
+            color: black;
+            line-height: 60px;
+               }
+        
+         p{
+            font-family: 'Spline Sans Mono', monospace;
+            font-size: 10px;
+            font-weight: 100;
+             }
+        
+        #argumento .img-conteiner{
+            background-image: url("fotosp/argumento2.jpg");
+            background-size: cover;
+            background-position: center center;
+            height: 350px;
+            width: 200px;
+            border: 3px solid rgb(217, 156, 249);
+            border-radius: 4px;
+        }
+        .terciario {
+            margin-top: 1%;
+            display: block;
+        }
+        .contenedor{
+            width: 50%;
+            padding: 2%;
+            margin-left: 80px;
+          
+        }
+        .contenedor figure{
+            position:relative;
+            height: 200px;
+            cursor: pointer;
+            overflow: hidden;
+            border-radius: 6px;
+            box-shadow: 0px 15px 25px rgba(0,0,0,0.50);
+         
+        }
+        .contenedor figure img{
+            height: 100%;
+            width: 100%;
+            transition: all 400ms ease-out;
+            will-change: transform;
+            border: 5px solid rgb(217, 156, 249);
+            margin-bottom: 1em;
+            display: flex;
+            justify-content: center
+        }
+            
+    
+        .contenedor figure .capa{
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(232, 210, 244, 0.7);
+            transition: all 400ms ease-out;
+            opacity: 0;
+            visibility: hidden;
+           text-align: center;
+        }
+        .contenedor figure:hover > .capa {
+            opacity: 1;
+            visibility: visible;
+        }
+        .contenedor figure:hover > .capa h3{
+            margin-top: 70px;
+            margin-bottom: 15px;
+        }
+        .contenedor figure:hover > img{
+            transform: scale(1.3);
+        }
+        .contenedor figure .capa h3{
+            color: #fff;
+            font-size: 10px;
+            transition: all 400ms ease-out;
+            font-family: 'Spline Sans Mono', monospace;
+            text-decoration: underline 3px rgba(228, 213, 240, 0.925);
+        }
+        .contenedor figure .capa p{
+            font-family: 'Spline Sans Mono', monospace;
+            color: #fff;
+            font-size: 8px;
+            line-height: 1;
+            width: 100%;
+            max-width: 220px;
+            margin: auto;
             }
+
+            .cuarto div {
+                width: 50%;
+                padding: 2%;
+                font-family: 'Spline Sans Mono', monospace;
+                font-size: smaller;
             }
+            .cuarto div img {
+                width: 200%;
+                margin-bottom: 1em;
+                margin-left: 6px;
+                margin-right: 10px;
+                justify-content: center;
+                display: flex;
+}
+}
