--- a/estilos.css
+++ b/estilos.css
@@ -17,18 +17,29 @@ header {
 nav ul {
     margin-top: 5%;
     margin-bottom: 5%;
+    color: #000;
+    list-style: none;
 }
 nav ul li {
     display: inline-block;
+    padding: 2px 2px 0px 0px;
 }
-nav ul li a{
+nav ul li a, .nav ul li a:visited {
     font-size: 1.2rem;
 	font-family: 'Spline Sans Mono', monospace;
-    padding-right: 2rem;
+	padding: 3px 3px;
+	color: rgb(77, 77, 77);
+	display: block;
+	border: rgb(255, 213, 255) 1px solid;
+	background: rgb(255, 255, 255);
+	text-decoration: none;
 }
-a{
+nav ul li a:hover {
     text-decoration: none;
     color: black;
+    color: #000;
+	background: rgb(255, 216, 249);
+	border: rgb(240, 155, 248) 1px solid;
 }
 
 h1{
@@ -344,6 +355,9 @@ button:hover{
             color: rgb(19, 18, 19);
             padding: 12px;
             }
+            footer .conteinerfooter p{
+                font-size: 12px;
+                }
             .criticas {
             margin-top: 1%;
             display: block;
@@ -399,9 +413,13 @@ button:hover{
             padding-left: 10px;
             line-height: 20px;
         }
+        #argumento .texto p{
+         font-size: 10px;
+        }
+        
         .tituloargumento{
            font-size: 30px;
-           line-height: 60px;
+           line-height: 40px;
         }
         
         #argumento .img-conteiner{
@@ -446,3 +464,4 @@ button:hover{
             display: flex;
 }
 }
+.menu li {float: left;} .menu:after {content: "."; display: block; height: 0; clear: both; visibility: hidden;}
