--- a/estilos.css
+++ b/estilos.css
@@ -377,33 +377,31 @@ button:hover{
             display: flex;
             justify-content: center;
             }
-            button{
+        button{
             font-size: 10px;
             font-weight: 10px;
             padding: 2px 2px;
             border-radius: 5px;
             }
 
-            .titulo{
+        .titulo{
             font-size: 20px;
             }
-            .principal2{
+       .principal2{
             height: 250px;
             }
-            .galeria div{
-            width: 10%;
-            padding: 2%;
-            align-items: center;
-            margin-left: 10px;
+        .galeria div{
+            padding: 1%;
+            margin-left: 25px;
             margin-right: 10px;
-            display: flex;
-        }
+          }
+          
         .galeria div img.example-image{
-            margin-bottom: 1em;
+            width: 33%;
             display: flex;
             justify-content: center;
+            margin-bottom: 2px;
         }
-
         #argumento .conteiner{
             padding: 2%;
             text-align: center;
