--- a/estilos.css
+++ b/estilos.css
@@ -387,10 +387,11 @@ button:hover{
             justify-content: center;
             }
         button{
-            font-size: 10px;
+            font-size: 7px;
             font-weight: 10px;
             padding: 2px 2px;
             border-radius: 5px;
+    
             }
 
         .titulo{
@@ -414,11 +415,14 @@ button:hover{
         #argumento .conteiner{
             padding: 2%;
             text-align: center;
+            width: 100%;
+            
         }
         
         #argumento .texto{
             padding-left: 10px;
             line-height: 20px;
+            width: 100%;
         }
         #argumento .texto p{
          font-size: 10px;
@@ -432,7 +436,7 @@ button:hover{
         #argumento .img-conteiner{
             background-image: url("fotosp/argumento2.jpg");
             height: 350px;
-            width: 200px;
+            width: 100px;
             border: 3px solid rgb(217, 156, 249);
         }
         .terciario {
@@ -442,6 +446,9 @@ button:hover{
         .contenedor{
             width: 50%;
             margin-left: 80px;
+        }
+        .contenedor figure:hover > .capa {
+            visibility:hidden;
         }
         .contenedor figure{
             height: 200px;
@@ -454,6 +461,7 @@ button:hover{
             
         .contenedor figure .capa h3{
             font-size: 10px;
+            visibility: visible;
         }
         .contenedor figure .capa p{
             font-size: 8px;
